[tool.poetry]
name = "constptbprobing"
version = "0.1.0"
description = "Package for reproducing the paper \"Constituency structure in language model representations\""
authors = ["sabijn <sabijn.perdijk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
conllu = "^4.5.3"
pandas = "^2.2.0"
nltk = "^3.8.1"
spacy = "^3.7.2"
treetools = "^0.4.0"
torch = "^2.1.2"
numpy = "^1.26.3"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"
imblearn = "^0.0"
transformers = "^4.37.0"
h5py = "^3.10.0"
matplotlib = "^3.8.2"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
